# conformal

./: .gitignore  Dockerfile  Dockerfile.backend  README.md  package.json  pyproject.toml
.github/workflows/: deploy.yml
Docs/: AGENT_PROMPTS.md  ANALYSIS_PATTERNS.md  ARCHITECTURE.md  CHART_RULES.yaml  CLAUDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  LANDING_PAGE.md  PRD.md  README.md  SCHEMA.md
backend/: chart_spec.py  cli.py  contracts.py  duckdb_loader.py  llm.py  main.py  pipeline.py  prompts.py
backend/agents/: analysis_planner.py  interpreter.py  presentation.py  query_executor.py
backend/prompts/: executor.md  interpreter.md  planner.md  presenter.md
backend/tests/: test_agents.py  test_demo_contracts.py  test_demo_e2e.py  test_llm_bedrock.py
deploy/: docker-compose.conformal.yml  docker-compose.dcmshriram.yml  nginx.conformal.conf
public/: sfs-data-discovery-graph.html
scripts/: deploy-conformal-ec2.sh  deploy-ec2.sh
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/app/dashboard/: page.tsx
src/app/data-graph/: page.tsx
src/components/: ChatPanel.tsx  CockpitShell.tsx  DashboardGrid.tsx  LiveChart.tsx  types.ts
src/components/brand/: ConformalMark.tsx
src/components/journal/: JournalChrome.tsx
src/components/landing/: ConformalEmailCapture.tsx  index.ts  (+8 more)
src/lib/: agent-orchestrator.ts  agent-types.ts  azure-openai.ts  data-dictionary.ts  demo-data.ts  demo-query-runner.ts  duckdb-store.ts  hero-queries.ts  journal.ts  section-scroll.ts  sfs-model-context.ts  site-variant.ts
(+3 files in other folders)
